# thread-api

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile
.github/workflows/: docker-publish.yml
.sqlx/: query-32f350a96331e7eb73862008774f2aa5592f4dab2ffd697f08b9b0ddc7ed60f3.json  query-5309eb376288b3881229e714967401a29508ff65fdcd3ec8b40dd885b4d42697.json  query-bd3f6e9384a85f864ad0e5bb499abc2bba7d28736e596b72add5d99e1c4eb5fe.json
config/: dev.toml  local.toml  prod.toml
src/: main.rs
src/analytics/: db.rs
src/features/: mod.rs  test.rs
src/features/error_reports/: handlers.rs  models.rs
src/features/health/: entity.rs  handler.rs  mod.rs  service.rs
src/features/metric/: models.rs
src/features/metric/v1/: mod.rs  pitch.rs  tolerance.rs
src/features/pipe/v1/: mod.rs
src/features/trapezoidal/common/: db.rs  mod.rs
src/features/trapezoidal/v1/: mod.rs
src/services/svg/: enums.rs  mod.rs  models.rs  svg_service.rs  text_options.rs
src/shared/: mod.rs
src/shared/database/: connection.rs  migrations.rs  mod.rs  service.rs
src/shared/enums/: language.rs  mod.rs  theme.rs  unit.rs
src/shared/enums/thread/: mod.rs  type_.rs  (+1 more)
src/shared/error/: conversions.rs  handlers.rs  mod.rs  types.rs
src/shared/logger/: config.rs  mod.rs
src/shared/logging/: enums.rs  init.rs  macros.rs  mod.rs  structs.rs
src/shared/middleware/: layer.rs  mod.rs
src/shared/setting/: build_config.rs  build_env.rs  mod.rs
src/shared/utils/: db.rs  http.rs  language.rs  mod.rs  number.rs  svg.rs
src/test/: mod.rs  test_imperial_1.rs  test_imperial_2.rs
(+80 files in other folders)
