[package]
name = "thread_api"
version = "0.1.11"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.8.4", features = ["macros", "tracing"] }
tokio = { version = "1.46.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
async-trait = "0.1.88"
# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "migrate", "json", "uuid", "chrono", "macros"] }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
toml = "0.9.2"


chrono = { version = "0.4.41", features = ["serde"] }
time = { version = "0.3.41", features = ["serde"] }
headers = "0.4.1"
regex = "1.11.1"

strum_macros = "0.27.2"
strum = { version = "0.27.2", features = ["derive"] }

